--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,7 @@
 <h1>Searching for - <%= @search_term %></h1>
+<% if @courses.nil? %>
+	<p>Sorry...No courses found with relevant information</p>
+<% else %>
 <table border ="1">
  <tr>
   <th>Image</th>
@@ -13,3 +16,4 @@
   </tr>
  <% end %>
 </table>
+<% end %>
